  * Bump to policy version 3.8.0, no changes needed.

  [ Damyan Ivanov ]
  * suspend.sh: lock running screensavers on suspend
    controlled by LOCK_SCREEN_ON_SUSPEND, defaults to 'yes'
  * add common functions.sh with detect_wlan() in it, used by wireless.sh
  * rules: simplify a bit using PKG and TMP variables
  * move X detection to functions.sh/detect_x_display()

 -- Damyan Ivanov <dmn@debian.org>  Fri, 22 Aug 2008 17:38:16 +0300

eeepc-acpi-scripts (1.0.4) unstable; urgency=low

  * add support for the new locations of wireless and brightness control files
    for 2.6.26 kernels. Closes: 488412. Thanks to Astrid S. de Wijn.

 -- Damyan Ivanov <dmn@debian.org>  Sun, 29 Jun 2008 18:23:06 +0300

eeepc-acpi-scripts (1.0.3) unstable; urgency=low

  [ Nico Golde]
  * Add sleep after loading ath_pci to prevent ifconfig failing
    because the interface is not already up (Closes: #485236).

  [ Ben Armstrong ]
  * lid.sh, lid: only suspend if a power manager is not present,
    otherwise let the power manager handle it.
  * Fix regex for display detection in hotkey.sh.

 -- Nico Golde <nion@debian.org>  Wed, 18 Jun 2008 21:03:34 +0200

eeepc-acpi-scripts (1.0.2) unstable; urgency=low

  * suspend.sh: fix detection of running shutdown.
    The code in 1.0.1 could wrongly decide that shutdown is running,
    cancelling the suspend, possibly leading to overheating if one had closed
    the lid and put the eee in its bag
  * add myself to Uploaders

 -- Damyan Ivanov <dmn@debian.org>  Sat, 08 Mar 2008 23:19:26 +0200

eeepc-acpi-scripts (1.0.1) unstable; urgency=low

  [ Nico Golde ]
  * Uncomment show_brightness function in hotkey.sh as it uses a bashism and
    is not used by any script.
  * Start aosd_cat in the background and kill aosd_cat before each new call
    to avoid output that it is lagging behind on long key presses.
  * Adding Vcs-Browser and Vcs-Git control fields.
  * Prevent the system to go into suspend after a lid event if a shutdown